# mc-ingress

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
src/: KubeCache.rs  kube_cache.rs  main.rs  mc_server.rs  opaque_error.rs
src/packets/: mod.rs
src/packets/clientbound/: login.rs  status.rs
src/packets/serverbound/: handshake.rs  status.rs
src/types/: mod.rs
