[package]
name = "mc-ingress"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# THE kubernetes api
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }

schemars = { version = "1" }

# Tokio
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = { version = "0.1.9", features = ["net"] }

# Error tracing?
tracing = "0.1.36"
tracing-subscriber = {version = "0.3.17", features = ["env-filter"]}
tracing-error = "0.2.1"

# Needed to parse data to yaml in kubectl
serde = "1.0.130"
serde_json = "1.0.68"
serde_derive = "1.0.130"
serde_yaml = "0.9.19"
serde-value = "0.7.0"

# .with_context()
# Should be a error handling and context library
anyhow = "1.0.71"
# CLI arg parser
clap = { version = "4.0", default-features = false, features = ["std", "cargo", "derive"] }

futures = { version = "0.3.17", default-features = false }
either = "1.6.1"
nix = { version= "0.30.1", features = [ "zerocopy"] }
tokio-splice2 = "0.3.2"
strip-ansi-escapes = "0.2.1"
evalexpr = { version = "13.1.0", features = ["regex"] }
